fix: added overflow to hidden the HTML to hide the overflow of the responsive view

--- a/style.css
+++ b/style.css
@@ -99,6 +99,9 @@ body {
   color: white;
 }
 @media (max-width: 40rem) {
+  html {
+    overflow: hidden;
+  }
   body {
     padding: 2rem 0;
   }
